Estudio Externo POAM

--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,9 @@
 \input{sections/ambito-misional}
 \newpage
 
+\input{sections/estudio-externo}
+\newpage
+
 \printbibliography[title={Referencias}]
 
 \end{document}
