--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,7 @@
 % Paquetes esenciales
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
+\usepackage{csquotes}
 \usepackage[left=2.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
@@ -19,6 +20,7 @@
 \usepackage{multirow}
 \usepackage{multicol}
 \usepackage{enumitem}
+\usepackage{makecell}
 \usepackage[style=apa, backend=biber]{biblatex}
 \addbibresource{references.bib}
 \usepackage{float}
@@ -44,6 +46,7 @@
 \fancyhead[R]{\small Universidad Distrital Francisco José de Caldas}
 \fancyfoot[C]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
+\setlength{\headheight}{14pt}
 
 % Configuración de títulos de secciones
 \titleformat{\section}
