Estudio externo arreglado Estudio interno Estudio SI/TI

--- a/main.tex
+++ b/main.tex
@@ -51,6 +51,12 @@
 \input{sections/estudio-externo}
 \newpage
 
+\input{sections/evaluacion-interna}
+\newpage
+
+\input{sections/evaluacion-siti}
+\newpage
+
 \printbibliography[title={Referencias}]
 
 \end{document}
