--- a/preamble.tex
+++ b/preamble.tex
@@ -68,6 +68,8 @@
 \setlist[itemize]{noitemsep, topsep=0pt}
 \setlist[enumerate]{noitemsep, topsep=0pt}
 
+\addto\captionsspanish{\renewcommand{\tablename}{Tabla}}
+
 % Comandos personalizados para información del documento
 \newcommand{\universidad}{Universidad Distrital Francisco José de Caldas}
 \newcommand{\facultad}{Facultad de Ingeniería}
