--- a/sections/estudio-externo.tex
+++ b/sections/estudio-externo.tex
@@ -1,4 +1,4 @@
-\section{Estudio Externo - Análisis POAM}
+\section{Estudio Externo -- Análisis POAM}
 \label{sec:estudio_externo}
 
 \subsection{Marco Metodológico POAM}
@@ -102,12 +102,10 @@ La evaluación ponderada se calcula multiplicando la importancia por el impacto 
 
 \begin{table}[H]
 \centering
-\caption{Matriz POAM - Perfil de Oportunidades y Amenazas MercadoLibre}
-\label{tab:matriz_poam_completa}
 \footnotesize
-\begin{tabular}{|p{1.8cm}|p{2.8cm}|c|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}{|p{2.2cm}|p{2.8cm}|c|c|c|c|c|c|c|c|c|c|}
 \hline
-\multirow{2}{*}{\textbf{Unidades de Análisis}} & \multirow{2}{*}{\textbf{Variables}} & \multirow{2}{*}{\textbf{Imp.}} & \multirow{2}{*}{\textbf{Impacto}} & \multirow{2}{*}{\textbf{Pond.}} & \multicolumn{7}{c|}{\textbf{Escala de Evaluación}} \\
+\multirow{2}{*}{\textbf{Unidad}} & \multirow{2}{*}{\textbf{Variables}} & \multirow{2}{*}{\textbf{Imp.}} & \multirow{2}{*}{\textbf{Impacto}} & \multirow{2}{*}{\textbf{Pond.}} & \multicolumn{7}{c|}{\textbf{Escala de Evaluación}} \\
 \cline{6-12}
 & & & & & \textbf{-15} & \textbf{-10} & \textbf{-5} & \textbf{0} & \textbf{5} & \textbf{10} & \textbf{15} \\
 \hline
@@ -158,7 +156,38 @@ La evaluación ponderada se calcula multiplicando la importancia por el impacto 
 & Responsabilidad Social & 3 & 1 & 3 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \multicolumn{1}{c|}{} & \\
 \hline
 \end{tabular}
+\caption{Matriz POAM -- Perfil de Oportunidades y Amenazas MercadoLibre}
+\label{tab:matriz_poam_completa}
 \end{table}
+
+La Tabla \ref{tab:matriz_poam_completa} presenta la evaluación detallada de todas las variables del entorno externo consideradas en el análisis POAM, permitiendo identificar las oportunidades y amenazas más relevantes para MercadoLibre \autocite{david2017}.
+
+\subsection{Resultados Consolidados por Unidad de Análisis}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|c|c|}
+\hline
+\textbf{Unidad de Análisis} & \textbf{Ponderación Total} & \textbf{Clasificación} \\
+\hline
+Entorno Social-Cultural & +25 & Oportunidad Significativa \\
+\hline
+Entorno Político & +18 & Oportunidad Significativa \\
+\hline
+Entorno Competitivo & +17 & Oportunidad Significativa \\
+\hline
+Entorno Tecnológico & +5 & Oportunidad Menor \\
+\hline
+Entorno Económico & +1 & Factor Neutro \\
+\hline
+Entorno Ambiental & +3 & Oportunidad Menor \\
+\hline
+\end{tabular}
+\caption{Evaluación Ponderada por Unidad de Análisis -- POAM}
+\label{tab:resultados_poam}
+\end{table}
+
+La Tabla \ref{tab:resultados_poam} consolida los resultados ponderados por cada unidad de análisis, mostrando que el entorno externo presenta oportunidades significativas en los aspectos social-culturales, políticos y competitivos \autocite{porter1985}.
 
 \subsection{Paso 7: Identificación de Oportunidades y Amenazas}
 
