Cuadro de Mando Integral

--- a/sections/estudio-externo.tex
+++ b/sections/estudio-externo.tex
@@ -237,6 +237,19 @@ La Tabla \ref{tab:resultados_poam} consolida los resultados ponderados por cada 
 \item Establecer coberturas financieras para mitigar riesgo cambiario
 \end{itemize}
 
+\subsection{Cuadro de Mando Integral}
+
+El Cuadro de Mando Integral (Balanced Scorecard) representa una herramienta estratégica fundamental que permite traducir la visión y estrategia de MercadoLibre en un conjunto coherente de indicadores de desempeño. Esta metodología facilita la alineación organizacional y el seguimiento sistemático del progreso hacia los objetivos estratégicos, integrando perspectivas financieras y no financieras en un marco de gestión integral.
+
+\begin{table}[H]
+    \centering
+    \includegraphics[width=\linewidth, height=0.8\textheight, keepaspectratio]{sections/Cuadro_Mando_Mercado_Libre.pdf}
+    \caption{Cuadro de Mando Integral MercadoLibre}
+    \label{tab:cuadro_mando_integral}
+\end{table}
+
+La Tabla \ref{tab:cuadro_mando_integral} presenta el Cuadro de Mando Integral diseñado específicamente para MercadoLibre, estructurado en las cuatro perspectivas clásicas del modelo: Financiera, Cliente, Procesos Internos, y Aprendizaje y Crecimiento. Este marco estratégico permite monitorear tanto los resultados operativos como los inductores de valor futuro, garantizando una gestión equilibrada entre objetivos de corto y largo plazo.
+
 \subsection{Conclusiones del Análisis POAM}
 
 El análisis POAM revela un entorno externo predominantemente favorable para MercadoLibre, con oportunidades significativas concentradas en regulación fintech y adopción digital. Las principales amenazas se relacionan con presiones de marketing y volatilidad económica, factores que requieren estrategias de mitigación específicas pero no comprometen la viabilidad del modelo de negocio.
